# NoBug

APT/: settings.gradle
APT/animation/: build.gradle
APT/animation/src/main/java/com/socct/animation/: ARouter.java
APT/app/: build.gradle
APT/app/src/androidTest/java/com/socct/apt/: ExampleInstrumentedTest.kt
APT/app/src/main/: AndroidManifest.xml
APT/app/src/main/java/com/socct/apt/: MainActivity.kt
APT/app/src/test/java/com/socct/apt/: ExampleUnitTest.kt
APT/compiler/: build.gradle
APT/compiler/src/main/java/com/socct/compiler/: ARouterProcessor.java
APT/gradle/wrapper/: gradle-wrapper.properties
AVDemo/: settings.gradle
AVDemo/app/: build.gradle
AVDemo/app/src/androidTest/java/com/socct/avdemo/: ExampleInstrumentedTest.kt
AVDemo/app/src/main/: AndroidManifest.xml
AVDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AVDemo/app/src/main/java/com/socct/avdemo/: MainActivity.kt
AVDemo/app/src/main/res/values/: themes.xml
AVDemo/app/src/main/res/values-night/: themes.xml
AVDemo/app/src/test/java/com/socct/avdemo/: ExampleUnitTest.kt
AVDemo/gradle/wrapper/: gradle-wrapper.properties
CustomView/NestRipple/: settings.gradle
CustomView/NestRipple/app/: build.gradle
CustomView/NestRipple/app/src/main/: AndroidManifest.xml
CustomView/NestRipple/app/src/main/res/layout/: activity_main.xml  activity_nest_ripple_main.xml
CustomView/NestRipple/app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
CustomView/NestRipple/app/src/main/res/values-night/: themes.xml
CustomView/NestRipple/gradle/wrapper/: gradle-wrapper.properties
CustomView/PorterDuffDemo/: settings.gradle
CustomView/PorterDuffDemo/app/: build.gradle
CustomView/PorterDuffDemo/app/src/main/: AndroidManifest.xml
CustomView/PorterDuffDemo/app/src/main/res/layout/: activity_main.xml
CustomView/PorterDuffDemo/app/src/main/res/values/: strings.xml  themes.xml
CustomView/PorterDuffDemo/app/src/main/res/values-night/: themes.xml
CustomView/PorterDuffDemo/gradle/wrapper/: gradle-wrapper.properties
FFmpeg/: settings.gradle
FFmpeg/app/: build.gradle
FFmpeg/app/src/androidTest/java/com/ffmpeg/practise/: ExampleInstrumentedTest.kt
FFmpeg/app/src/androidTest/java/com/socct/ffmpeg/: ExampleInstrumentedTest.kt
FFmpeg/app/src/main/: AndroidManifest.xml
FFmpeg/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
FFmpeg/app/src/main/cpp/common/: AVPacketQueue.cpp  AVPacketQueue.h  SyncClock.h  ThreadSafeQueue.h
FFmpeg/app/src/main/cpp/player/: FFMediaPlayer.cpp  FFMediaPlayer.h  HWCodecPlayer.cpp  HWCodecPlayer.h  MediaPlayer.h  PlayerWrapper.cpp  PlayerWrapper.h
FFmpeg/app/src/main/cpp/player/decoder/: AudioDecoder.cpp  AudioDecoder.h  Decoder.h  DecoderBase.cpp  DecoderBase.h  VideoDecoder.cpp  VideoDecoder.h
FFmpeg/app/src/main/cpp/player/render/: BaseGLRender.h
FFmpeg/app/src/main/cpp/player/render/audio/: AudioGLRender.cpp  AudioGLRender.h  AudioRender.h  OpenSLRender.cpp  OpenSLRender.h
FFmpeg/app/src/main/cpp/player/render/video/: NativeRender.cpp  NativeRender.h  VRGLRender.cpp  VRGLRender.h  VideoGLRender.cpp  VideoGLRender.h  VideoRender.h
FFmpeg/app/src/main/cpp/recorder/: GLCameraRender.cpp  GLCameraRender.h  MediaRecoder.cpp  MediaRecoder.h  MediaRecoderContext.cpp  MediaRecoderContext.h  SIngleAudioRecoder.cpp  SIngleAudioRecoder.h  SingleAudioRecoder.cpp  SingleAudioRecoder.h  SingleVideoRecoder.cpp  SingleVideoRecoder.h
FFmpeg/app/src/main/cpp/util/: ASanTestCase.h  GLUtils.cpp  GLUtils.h  ImageDef.h
FFmpeg/app/src/main/java/com/ffmpeg/practise/: EventCallback.kt  FFPlayer.kt  MainActivity.kt
FFmpeg/app/src/main/java/com/socct/ffmpeg/: MainActivity.kt
FFmpeg/app/src/test/java/com/ffmpeg/practise/: ExampleUnitTest.kt
FFmpeg/app/src/test/java/com/socct/ffmpeg/: ExampleUnitTest.kt
FFmpeg/gradle/wrapper/: gradle-wrapper.properties
FFmpegDemo/: build.gradle  settings.gradle
FFmpegDemo/app/: build.gradle
FFmpegDemo/app/src/androidTest/java/com/ffmpeg/ffmpegdemo/: ExampleInstrumentedTest.kt
FFmpegDemo/app/src/main/: AndroidManifest.xml
FFmpegDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
FFmpegDemo/app/src/main/java/com/ffmpeg/player/: MainActivity.kt
FFmpegDemo/gradle/wrapper/: gradle-wrapper.properties
FFmpegPlayer/app/: build.gradle
FFmpegPlayer/app/src/main/: AndroidManifest.xml
FFmpegPlayer/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  EnjoyPlayer.cpp  EnjoyPlayer.h  JavaCallHelper.cpp  JavaCallHelper.h  Log.h  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
FFmpegPlayer/gradle/wrapper/: gradle-wrapper.properties
FFmpegPlayerDemo/app/: build.gradle
FFmpegPlayerDemo/app/src/main/: AndroidManifest.xml
FFmpegPlayerDemo/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JPlayer.cpp  JPlayer.h  JavaCallHelper.cpp  JavaCallHelper.h  Log.h  SafeQueue.h  Test.cpp  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
Hilt/app/: build.gradle
Hilt/app/src/main/: AndroidManifest.xml
Hilt/gradle/wrapper/: gradle-wrapper.properties
Https/: settings.gradle
Https/app/: build.gradle
Https/app/src/main/: AndroidManifest.xml
Https/gradle/wrapper/: gradle-wrapper.properties
JVMTI/: settings.gradle
JVMTI/app/: build.gradle
JVMTI/app/src/main/: AndroidManifest.xml
JVMTI/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
JVMTI/app/src/main/res/values/: strings.xml  themes.xml
JVMTI/app/src/main/res/values-night/: themes.xml
JVMTI/gradle/wrapper/: gradle-wrapper.properties
Living/app/: build.gradle
Living/app/src/main/: AndroidManifest.xml
Living/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Living/app/src/main/cpp/librtmp/: CMakeLists.txt
Living/app/src/main/res/layout/: activity_main.xml
Living/app/src/main/res/values/: strings.xml  themes.xml
Living/app/src/main/res/values-night/: themes.xml
Living/gradle/wrapper/: gradle-wrapper.properties
open-gldemo/app/: build.gradle
open-gldemo/app/src/main/: AndroidManifest.xml
open-gldemo/gradle/wrapper/: gradle-wrapper.properties
(+49 files in other folders)
